@@ -1,5 +1,5 @@
 ##*****************************************************************************
-## $Id: Makefile.am,v 1.4 2007-02-09 18:44:34 chu11 Exp $
+## $Id: Makefile.am,v 1.5 2008-03-28 16:18:58 chu11 Exp $
 ##*****************************************************************************
 ## Process this file with automake to produce Makefile.in.
 ##*****************************************************************************
@@ -37,8 +37,21 @@ cerebro_event_updown_la_CFLAGS  = -I$(srcdir)/../../libs/include \
                                   -I$(srcdir)/../../libs/debug
 cerebro_event_updown_la_LIBADD  = ../../libs/common/libhash.la \
                                   ../../libs/common/liblist.la \
-                                  ../../libs/debug/libdebug.la
+                                  ../../libs/debug/libdebug.la \
+				  ../../libs/cerebro_error/libcerebro_error.la
 
 force-dependency-check:
+
+../../libs/common/libhash.la : force-dependency-check
+	@cd `dirname $@` && make `basename $@`
+
+../../libs/common/liblist.la : force-dependency-check
+	@cd `dirname $@` && make `basename $@`
+
+../../libs/cerebro_error/libcerebro_error.la : force-dependency-check
+	@cd `dirname $@` && make `basename $@`
+
+../../libs/debug/libdebug.la : force-dependency-check
+	@cd `dirname $@` && make `basename $@`
 
 EXTRA_DIST = event.map
