@@ -1,6 +1,8 @@
 2008-03-28  Patrick Winnertz <patrick.winnertz@credativ.de>
 
 	* man/: Tons of manpage nroff fixes.
+
+	* src/modules: debian compile fixes.
 	
 2008-03-26  Albert Chu  <chu11@llnl.gov>
 
